# pytf-web

./: .gitignore  Cargo.toml  README.md  build.sh  packages_rocky.txt  run_server.sh  run_worker.sh  setup_pyenv.sh  test_users.csv
pytf-viewer/: package-lock.json  package.json  tsconfig.json
pytf-viewer/public/: index.html
pytf-viewer/src/: App.css  App.tsx
pytf-viewer/src/components/: Analysis.tsx  CollapseIndicator.tsx  Composition.tsx  Deposition.tsx  Help.tsx  InputRange.tsx  Login.tsx  MolList.tsx  SmilesImg.tsx  SubmitButton.tsx  TileSpinner.tsx  Viewer.tsx  Visualiser.tsx  types.tsx
pytf-viewer/typing/smiles-drawer/: index.d.ts
resources/: atom_types.json  base_config.yml  input_config.yml  molecules.json  name_map.json
resources/molecules/: 5GOY.itp  FFX5.itp  G111.itp  G211.itp  G214.itp  GRM_4nm.itp  I8EW.itp  LCHU.itp  M304.itp  M828.itp  UZ3N.itp  YUVT.itp  ZN3Y.itp  _J0B.itp  _U1M.itp
src/: authentication.rs  client_session.rs  hash_users.rs  input_config.rs  job_queue.rs  lib.rs  main.rs  pdb2xyz.rs  pytf.rs  pytf_config.rs  pytf_frame.rs  pytf_runner.rs  server.rs  server_args.rs  worker.rs  worker_client.rs  worker_session.rs
