[package]
name = "pytf-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "pytf_web"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "pytf-server"
path = "src/server.rs"

[[bin]]
name = "pytf-worker"
path = "src/worker.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-rt = "2.9.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.72"
argon2 = "0.5.0"
awc = "3.1.1"
bincode = "1.3.3"
futures = "0.3.28"
futures-util = "0.3.28"
libc = "0.2.147"
num = "0.4.1"
pyo3 = { version = "0.19.1", features = ["auto-initialize", "anyhow"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = "3.1.0"
serde_yaml = "0.9.25"
xdrfile = { git = "https://github.com/ssande7/libxdrfile-rs" }
